@@ -2,7 +2,7 @@
 <object name="portal_javascripts">
  <javascript id="selectivizr.js" 
              conditionalcomment="lt IE 9"
-             insert-after="jquery.js" />
+             insert-before="tiny_mce.js" />
  <javascript id="modernizr.js" />
  <javascript id="jquery.easing.js" />
  <javascript id="jquery.jBreadCrumb.js" />
