@@ -4,6 +4,10 @@ Changelog
 0.6 - unreleased
 ----------------
 
+- Move `selectivizr.js` before `tinymce.js` to keep the splitting we got via
+  `html5.js` before. Refs #126.
+  [hannosch]
+
 - Removed `html5.js` since all of what it does is included in `modernizr.js`.
   [denys]
 
